dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard # Service name from ingress
spec:
  selector:
    app: default-response-app
  ports:
    - protocol: TCP
      port: 80 # Service port from ingress
      targetPort: 8080
